Fixed warnings Removed dead code using CodePro Analytix
Signed-off-by: Peter Nelson <peter@peterdn.com>